fix: has-remote-items and has-guest-items title styling causes a 1px shift when segment becomes next/onAir

--- a/meteor/client/styles/rundownView.scss
+++ b/meteor/client/styles/rundownView.scss
@@ -643,6 +643,7 @@ svg.icon {
 			.segment-timeline__title {
 				> h2 {
 					border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+					margin-bottom: -1px;
 				}
 			}
 		}
@@ -663,6 +664,7 @@ svg.icon {
 			.segment-timeline__title {
 				> h2 {
 					border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+					margin-bottom: -1px;
 				}
 			}
 		}
